# soa_interface

./: README.md
soa_sample_app/: CMakeLists.txt  a.out  build.sh  clean.sh  env.sh  profile.sh
soa_sample_app/blarg2/: OLDmainwindow.cpp  OLDmainwindow.h  OLDmainwindow.ui  blarg2.files  blarg2.includes  blarg2.pro  blarg2window.cpp  blarg2window.h  blarg2window.ui  console.cpp  console.h  dataFile.txt  logicwidget.cpp  logicwidget.h  main.cpp  mainwindow.cpp.autosave  mainwindow.ui  parsy.cpp  parsy.h
soa_sample_app/include/: Belief.h  Belief_Actor.h  Belief_Base.h  Belief_Casualty_Delivery.h  Belief_Casualty_Pickup.h  Belief_Custom.h  Belief_GridSpec.h  Belief_Mode_Command.h  Belief_NGOSite.h  Belief_NoFlyZone.h  Belief_RoadCell.h  Belief_SPOI.h  Belief_Supply_Delivery.h  Belief_Supply_Pickup.h  Belief_Task.h  Belief_TaskConstraint.h  Belief_Terrain.h  Belief_Time.h  Belief_Village.h  Belief_Waypoint.h  Belief_WaypointPath.h  Belief_Waypoint_Override.h  CustomBeliefHandler.h  GridCell.h  GridMath.h  MapLocation.h  MergePolicy.h  Region.h  Serializer.h  SoaAutonomy.h  TimeManager.h  WorldDataManager.h  WorldLocation.h  autonomy.pb.h  soa_shared_ptr.h
soa_sample_app/interface_20JUN16/: Makefile  borderlayout.cpp  borderlayout.h  interface_20JUN16 (copy).pro  interface_20JUN16.pro  interface_20JUN16.pro.user.59bc97f  interfacewindow (another copy).ui  interfacewindow (copy).cpp  interfacewindow (copy).h  interfacewindow (copy).ui  interfacewindow.cpp  interfacewindow.h  main.cpp  moc_bytaskpanel.cpp  moc_bytasksidepanelcontainer.cpp  moc_console.cpp  moc_interfacewindow.cpp  moc_logicwidget.cpp  moc_mapwidget.cpp  moc_parsy.cpp  moc_qclicklabel.cpp  moc_qsidepanel.cpp  moc_qsidepanelcontainer.cpp  moc_qsidepanelcontainertabwidget.cpp  moc_tabpanel2.cpp  moc_taskpanelwidget.cpp  moc_webview.cpp  ui_interfacewindow.h  ui_taskpanelwidget.h
soa_sample_app/proto_buff/: README.txt  update_protobuff.sh
soa_sample_app/src/: BaseBehavior.cpp  BaseBehavior.h  Behavior.h  CustomBeliefExample.cpp  CustomBeliefExample.h  HeavyLiftBehavior.cpp  HeavyLiftBehavior.h  SmallUAVBehavior.cpp  SmallUAVBehavior.h  Test.cpp
soa_sample_app/tabpanelwidget/: main.cpp  tabpanelwidget.cpp  tabpanelwidget.h  tabpanelwidget.pro  tabpanelwidget.ui
soa_sample_app/tabwidget2/: main.cpp  tabpanel2.cpp  tabpanel2.h  tabpanel2.ui  tabwidget2.pro
soa_sample_app/taskpanelwidget/: entitybox.cpp  entitybox.h  main.cpp  (+8 more)
(+149 files in other folders)
